<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Power</string>
    <string name="action_settings">Settings</string>
    <string name="home">HOME</string>
    <string name="voltage">Voltage : </string>
    <string name="current">Current : </string>
    <string name="device">DEVICE</string>
    <string name="fan">FAN</string>
    <string name="computer">COMPUTER</string>
    <string name="light">LIGHT</string>
    <string name="wash">WASH</string>
    <string name="wash2">WASH2</string>
    <string name="title_activity_van_act">MainActivity</string>
    <string name="title_activity_van">VanActivity</string>
    <string name="welcome_home_page">Welcome to HOME page!</string>
    <string name="welcom_device_page">Welcome to DEVICE page!</string>
    <string name="cost">Cost :</string>
    <string name="power">Power :</string>
    <string name="title_activity_light">LightActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_client_thread">ClientThread</string>
    <string name="refresh">refresh</string>
    <string name="aircon">AIR CONDITIONER</string>

</resources>
